--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "keywords": [],
   "author": "",
   "license": "MIT",
-  "dependencies": {
+  "devDependencies": {
     "css-loader": "^7.0.0",
     "csv-loader": "^3.0.5",
+    "eslint": "^9.0.0",
+    "eslint-config-prettier": "^9.1.0",
     "json5": "^2.2.3",
     "prettier": "^3.2.5",
     "style-loader": "^3.3.4",
@@ -21,8 +23,5 @@
     "webpack-cli": "^5.1.4",
     "xml-loader": "^1.2.1",
     "yamljs": "^0.3.0"
-  },
-  "devDependencies": {
-    "eslint-config-prettier": "^9.1.0"
   }
 }
